client/src/components/Dashboard/EntryLog/EntryLog.module.scss
// Entry Logs
.entryLog {
  display: flex;
  flex-direction: column;

  width: 340px;
  margin-top: 48px;

  .noEntriesText {
    display: none;
  }
}

// Entry Tables
.entryHead {
  display: flex;
  flex-direction: row;
  justify-content: space-between;

  font-size: 18px;
  font-weight: 700;
  padding: 0px 12px;
}
.entryTable {
  display: flex;
  flex-direction: column;

  margin-bottom: 20px;
  padding: 8px 12px;

  border: 1px solid rgba(25, 4, 69, 0.1);
  border-radius: 16px;
  background: white;
}

// Entry Row
.entryRow {
  position: relative;
  display: grid;
  grid-template-columns: 1fr 60px;

  height: 28px;
  padding: 2px 8px;
  margin: 3px 0px;

  font-size: 16px;
  border-radius: 8px;
  border: 1px solid rgba(25, 4, 69, 0);

  p {
    line-height: 24px;
  }
  .description {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
  }
  .startTime {
    display: none;
    text-align: right;
  }
  .duration {
    font-weight: 700;
    text-align: right;
  }
  &.optimistic {
    color: rgba(0, 0, 0, 0.3);
  }
  &.pomodoro {
    background: rgba(249, 98, 98, 0.2);
    &.optimistic {
      background: rgba(249, 98, 98, 0.1);
    }
  }
  &.shortBreak {
    background: rgba(91, 184, 165, 0.2);
    &.optimistic {
      background: rgba(91, 184, 165, 0.1);
    }
  }
  &.longBreak {
    background: rgba(34, 153, 212, 0.2);
    &.optimistic {
      background: rgba(34, 153, 212, 0.1);
    }
  }
  &:hover {
    border: 1px solid rgba(25, 4, 69, 0.3);
  }

  .buttonContainer {
    position: absolute;
    display: none;
    right: 0px;

    button {
      display: flex;
      justify-content: center;
      align-items: center;
      height: 26px;
      width: 52px;

      background: white;
      border: none;
      outline: none;
      .icon {
        text-align: center;
        width: 14px;
        height: 14px;
      }
      &:hover {
        cursor: pointer;
      }
    }
    .editButton {
      border-right: 1px solid rgba(25, 4, 69, 0.3);
      border-left: 1px solid rgba(25, 4, 69, 0.3);
      .icon {
        color: rgba(0, 0, 0, 0.65);
      }
    }
    .deleteButton {
      border-radius: 0px 8px 8px 0px;
      .icon {
        color: rgba(226, 19, 19, 0.65);
      }
    }
  }
  &:hover .buttonContainer,
  &:active .buttonContainer {
    display: flex;
  }
}

// Desktop breakpoint - side-by-side timer and log
@media screen and (min-width: 1024px) {
  .entryLog {
    width: 40%;
    max-width: 600px;
    height: 564px; // height of timer

    margin-left: 10%;
    margin-top: 0px;
    padding: 12px 24px;

    border: 1px solid rgba(25, 4, 69, 0.1);
    border-radius: 16px;

    overflow-y: auto; /* add vertical scrollbar */

    .noEntriesText {
      display: block;
      margin: 12px;
      color: #999;
    }

    /* Styling for scrollbar - from Huntr*/
    &::-webkit-scrollbar {
      height: 18px;
      width: 18px;
      background-color: rgba(226, 226, 226, 0.6);
    }
    &::-webkit-scrollbar-thumb {
      border: 4px solid transparent;
      box-shadow: inset 0 0 10px 10px rgba(0, 0, 0, 0.1);
      border-radius: 100px;
    }
    &::-webkit-scrollbar-thumb:hover {
      box-shadow: inset 0 0 10px 10px rgba(0, 0, 0, 0.2);
    }
  }

  .entryRow {
    .buttonContainer {
      right: 4px;

      // Vertically center in entryrow
      top: 50%;
      transform: translateY(-50%);

      button {
        margin: 0px 2px;
        &:hover {
          cursor: pointer;
        }
      }
      .editButton {
        border-radius: 4px;
        border: none;
        .icon {
          color: rgba(0, 0, 0, 0.54);
        }
        &:hover {
          .icon {
            color: rgba(0, 0, 0, 0.65);
          }
        }
      }
      .deleteButton {
        border-radius: 4px;
        border: none;
        .icon {
          color: rgba(226, 19, 19, 0.54);
        }
        &:hover {
          .icon {
            color: rgba(226, 19, 19, 0.65);
          }
        }
      }
    }
  }
}

// Desktop/laptop height breakpoint
@media screen and (min-width: 1024px) and (min-height: 860px) {
  // 814px = default height of app
  .entryLog {
    height: calc(564px + 5vh); // height of timer
  }
}

// Larger desktop breakpoint - start time shown in log
@media screen and (min-width: 1200px) {
  .entryRow {
    position: relative;
    display: grid;
    grid-template-columns: 1fr 72px 60px;
    .startTime {
      display: block;
    }
  }
}

